[package]

name = "think_cap"
version = "0.0.1"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
repository = "https://github.com/thinkcap/ThinkCap-core"
license = "Apache-2.0"
readme = "README.md"

description = """
A multilayer feedforward backpropagation neural network library
"""

keywords = ["nn", "neural-network", "classifier", "backpropagation",
            "machine-learning"]

[dependencies]
rand = "0.3.7"
rustc-serialize = "0.3.12"
time = "0.1.24"
